# cpp_ssz

./: .test.cpp.swp  .travis.yml  CMakeLists.txt  Common.h  Makefile  README.md  SszBase.h  SszBool.h  bytesN_test  bytes_test.cpp  cpp_ssz.h  cpp_ssz.hpp  cpp_ssz_bool.cpp  cpp_ssz_bool.h  cpp_ssz_bytes.h  cpp_ssz_bytesN.h  cpp_ssz_constant.h  cpp_ssz_container.h  cpp_ssz_list.h  cpp_ssz_tuple.h  cpp_ssz_uint.cpp  cpp_ssz_uint.h  list_test  main.cpp  test.cpp  test.h  test_bool.cpp  test_bytes.cpp  test_bytesN.cpp  test_codec.cpp  test_container.cpp  test_list.cpp  test_merkleize.cpp  test_mix_in_length.cpp  test_pack.cpp  test_ssz.cpp  test_tuple.cpp  test_uint.cpp  test_vector.cpp  uintN_test  (+1 more)
deprecated/poc/: README.md  cpp_ssz.h  cpp_ssz_bool.h  cpp_ssz_tuple.h
deprecated/poc1/: cpp_ssz.h  cpp_ssz_bytes.h  cpp_ssz_constant.h  test_codec.cpp
include/: cpp_ssz_bytes.h  cpp_ssz_bytesN.h  cpp_ssz_container.h  cpp_ssz_list.h  cpp_ssz_uint.h  cpp_ssz_util.h  cpp_ssz_vector.h
poc/: Makefile  cpp_ssz_tuple.cpp  test  test_ssz.cpp
poc1/: README.md  cpp_ssz_bytes.cpp  cpp_ssz_constant.h  cpp_ssz_uint.h  test.cpp  test_bytes.cpp
